Docker compose init
