# docs/swagger.json
@@ -59,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Auth"
+                            "$ref": "#/definitions/models.SignInput"
                         }
                     }
                 ],
@@ -67,7 +67,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Auth"
+                            "$ref": "#/definitions/models.SignInput"
                         }
                     }
                 }
@@ -109,25 +109,16 @@
         }
     },
     "definitions": {
-        "models.Auth": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "example": "123456"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "example@gmail.com"
-                }
-            }
-        },
         "models.Customer": {
             "type": "object",
             "properties": {
                 "firstname": {
                     "type": "string",
                     "example": "Adam"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "123456"
                 },
                 "registrationDate": {
                     "type": "string",
@@ -136,6 +127,19 @@
                 "releaseDate": {
                     "type": "string",
                     "example": "2020-09-09T22:21:46+00:00"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "example@gmail.com"
+                }
+            }
+        },
+        "models.SignInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
                 },
                 "username": {
                     "type": "string",
