# internal/apiserver/models/model.go
@@ -19,7 +19,7 @@ type Item struct {
 	Quantity    int    `json:"quantity,omitempty" example:"1"`
 }
 
-type Auth struct {
+type SignInput struct {
 	Password string `json:"password,omitempty" example:"123456"`
 	Username string `json:"username,omitempty" example:"example@gmail.com"`
 }
@@ -27,6 +27,7 @@ type Auth struct {
 type Customer struct {
 	Username         string    `json:"username,omitempty" example:"example@gmail.com"`
 	FirstName        string    `json:"firstname,omitempty" example:"Adam"`
+	Password         string    `json:"password,omitempty" example:"123456"`
 	RegistrationDate time.Time `json:"registrationDate,omitempty" example:"2020-09-09T21:21:46+00:00"`
 	ReleaseDate      time.Time `json:"releaseDate,omitempty" example:"2020-09-09T22:21:46+00:00"`
 }
